--- a/src/gui/NinjamPanel.ui
+++ b/src/gui/NinjamPanel.ui
@@ -210,7 +210,7 @@
       <item row="2" column="1" colspan="3">
        <widget class="QLabel" name="labelMetronomeIControls">
         <property name="text">
-         <string>METRONOME CONTROLS</string>
+         <string>metronome</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
