--- a/Client/src/gui/ChatPanel.ui
+++ b/Client/src/gui/ChatPanel.ui
@@ -26,19 +26,9 @@
    <property name="bottomMargin">
     <number>6</number>
    </property>
-   <item row="3" column="0">
-    <widget class="QLabel" name="iconLabel">
-     <property name="text">
-      <string/>
-     </property>
-     <property name="textFormat">
-      <enum>Qt::RichText</enum>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="../resources/jamtaba.qrc">:/images/chat.png</pixmap>
-     </property>
-    </widget>
-   </item>
+   <property name="horizontalSpacing">
+    <number>2</number>
+   </property>
    <item row="3" column="1">
     <widget class="QLineEdit" name="chatText">
      <property name="accessibleDescription">
@@ -46,29 +36,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="2">
-    <widget class="QPushButton" name="buttonClear">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="toolTip">
-      <string>clear the messages ...</string>
-     </property>
-     <property name="accessibleDescription">
-      <string>Press that button to clear your message</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="flat">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="3">
+   <item row="1" column="0" colspan="4">
     <widget class="QScrollArea" name="chatScroll">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -103,10 +71,40 @@
      </widget>
     </widget>
    </item>
+   <item row="3" column="3">
+    <widget class="QPushButton" name="buttonClear">
+     <property name="toolTip">
+      <string>clear the messages ...</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>Press that button to clear your message</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QPushButton" name="buttonAutoTranslate">
+     <property name="toolTip">
+      <string>Auto translate</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>Turn on/off the auto translation for chat messages</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
- <resources>
-  <include location="../resources/jamtaba.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
