fixing metronome and master PeakMeter height

--- a/Client/src/resources/jamtaba.css
+++ b/Client/src/resources/jamtaba.css
@@ -521,6 +521,7 @@ PeakMeter{
     border-radius: 1px;
     width: 3px;
     min-width: 3px;
+    min-height: 2px;
 }
 
 PeakMeter#masterMeterL, PeakMeter#masterMeterR{
