--- a/Client/src/gui/TrackGroupView.ui
+++ b/Client/src/gui/TrackGroupView.ui
@@ -54,7 +54,7 @@
        <number>3</number>
       </property>
       <item>
-       <widget class="QLineEdit" name="groupNameField">
+       <widget class="MarqueeLineEdit" name="groupNameField">
         <property name="text">
          <string>...</string>
         </property>
@@ -79,6 +79,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MarqueeLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>MarqueeLineEdit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
