--- a/Client/src/gui/TrackGroupView.ui
+++ b/Client/src/gui/TrackGroupView.ui
@@ -54,12 +54,9 @@
        <number>3</number>
       </property>
       <item>
-       <widget class="MarqueeLineEdit" name="groupNameField">
+       <widget class="QLineEdit" name="groupNameField">
         <property name="text">
          <string>...</string>
-        </property>
-        <property name="readOnly">
-         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -79,13 +76,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>MarqueeLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>MarqueeLineEdit.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
